--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
       </header>
       <article class="banner"></article>
     </section>
-    <script src="js/scripts.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
