--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section aria-label="banner with main navigation" class="hero">
       <header class="header">
         <nav class="navbar">
-          <a href="/index.html"
+          <a class="logo" href="/index.html"
             ><img src="/Assets/remix-logo-light-mode.svg" alt="Go Home Remix."
           /></a>
           <button
@@ -57,8 +57,8 @@
             <svg
               aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
+              width="28"
+              height="28"
               viewBox="0 0 24 24"
             >
               <path d="M4 6H20V8H4zM4 11H20V13H4zM4 16H20V18H4z"></path>
@@ -67,8 +67,8 @@
               aria-hidden="true"
               class="none"
               xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
+              width="28"
+              height="28"
               viewBox="0 0 24 24"
             >
               <path
@@ -87,8 +87,7 @@
               <li><a href="#">Sign in</a></li>
               <li>
                 <button href="#" class="btn btn-cta">
-                  <span
-                    ><svg
+                  <svg
                       width="14"
                       height="21"
                       viewBox="0 0 14 21"
@@ -114,15 +113,53 @@
                       <path
                         d="M13.9986 10.5C13.9986 12.432 12.4309 14 10.4993 14C8.56769 14 7 12.432 7 10.5C7 8.568 8.56769 7 10.4993 7C12.4309 7 13.9986 8.568 13.9986 10.5Z"
                         fill="#1ABCFE"
-                      /></svg></span
-                  >Get Figma Plugin
+                      /></svg>
+                  Get Figma Plugin
                 </button>
               </li>
             </ul>
           </div>
         </nav>
       </header>
-      <article class="banner"></article>
+      <article class="banner">
+        <div class="banner-img">
+          <img src="/Assets/hero-image-light-mode.svg" alt="List of projects to do according to priority level and date in Remix.">
+        </div>
+        <div class="banner-description">
+          <h1>Developer hand-off has <span class="cursor"><span>never</span></span> been easier.</h1>
+          <p>Remix is a Figma and Sketch plugin that was made with Developers in mind. Create custom React components in seconds, copy CSS code in one click, and export your assets effortlessly.</p>
+          <button href="#" class="btn btn-cta">
+            <svg
+                width="14"
+                height="21"
+                viewBox="0 0 14 21"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M3.50075 21C5.43235 21 7.00003 19.432 7.00003 17.5V14H3.50075C1.56914 14 0.00146484 15.568 0.00146484 17.5C0.00146484 19.432 1.56914 21 3.50075 21Z"
+                  fill="#0ACF83"
+                />
+                <path
+                  d="M0.00146484 10.5C0.00146484 8.568 1.56914 7 3.50075 7H7.00003V14H3.50075C1.56914 14 0.00146484 12.432 0.00146484 10.5Z"
+                  fill="#A259FF"
+                />
+                <path
+                  d="M0.00244141 3.5C0.00244141 1.568 1.57012 0 3.50172 0H7.00101V7H3.50172C1.57012 7 0.00244141 5.432 0.00244141 3.5Z"
+                  fill="#F24E1E"
+                />
+                <path
+                  d="M7 0H10.4993C12.4309 0 13.9986 1.568 13.9986 3.5C13.9986 5.432 12.4309 7 10.4993 7H7V0Z"
+                  fill="#FF7262"
+                />
+                <path
+                  d="M13.9986 10.5C13.9986 12.432 12.4309 14 10.4993 14C8.56769 14 7 12.432 7 10.5C7 8.568 8.56769 7 10.4993 7C12.4309 7 13.9986 8.568 13.9986 10.5Z"
+                  fill="#1ABCFE"
+                /></svg>
+            Get Figma Plugin
+          </button>
+        </div>
+      </article>
     </section>
     <script src="/index.js"></script>
   </body>
