--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </head>
 
   <body>
-    <section aria-label="banner with main navigation" class="hero">
+    <section aria-label="Banner with main navigation." class="hero">
       <header class="header">
         <nav class="navbar">
           <a class="logo" href="/index.html"
@@ -123,7 +123,7 @@
       </header>
       <article class="banner">
         <div class="banner-img">
-          <img src="/Assets/hero-image-light-mode.svg" alt="List of projects to do according to priority level and date in Remix.">
+          <img src="/Assets/hero-img-light.svg" alt="List of projects to do according to priority level and date in Remix.">
         </div>
         <div class="banner-description">
           <h1>Developer hand-off has <span class="cursor"><span>never</span></span> been easier.</h1>
@@ -160,6 +160,44 @@
           </button>
         </div>
       </article>
+    </section>
+
+    <section aria-label="Actively collaborate with developers in real time." class="collaboration wrapper">
+      <div class="collaboration-description">
+        <h2>Collaboration has never been easier.</h2>
+        <p>With Remix, you will be able to actively collaborate with developers in real-time. No more back-and-forth emails and Slack messages to get that design perfect.</p>
+        <a href="#">Learn More →</a>
+      </div>
+      <div class="collaboration-img">
+        <img src="/Assets/collaboration.png" alt="about sharing your collaboration with someone">
+      </div>
+    </section>
+
+    <section class="testimonial">
+      <div class="testimonial-description">
+        <h2>What our users say</h2>
+        <p>We have cultivated a growing community for developers, and that matters to us. See what our users are saying.</p>
+        <div>
+          <span><span>5.0</span>Rating</span>
+          <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M13 0.635742L16.9737 8.83441L26 10.0813L19.4307 16.395L21.034 25.3639L13 21.0663L4.96492 25.3639L6.56933 16.395L0 10.0813L9.02633 8.83441L13 0.635742Z" fill="#EAAC4C"/>
+            </svg>
+        </div>
+        <div>
+          <span><span>2400+</span>Developers</span>
+          <ul>
+            <li><img src="/Assets/useravatar06.png" alt=""></li>
+            <li><img src="/Assets/useravatar05.png" alt=""></li>
+            <li><img src="/Assets/useravatar04.png" alt=""></li>
+            <li><img src="/Assets/useravatar03.png" alt=""></li>
+            <li><img src="/Assets/useravatar02.png" alt=""></li>
+            <li><img src="/Assets/useravatar01.png" alt=""></li>
+          </ul>
+        </div>
+      </div>
+      <div>
+
+      </div>
     </section>
     <script src="/index.js"></script>
   </body>
