testimonial design with avatar

--- a/index.html
+++ b/index.html
@@ -88,32 +88,33 @@
               <li>
                 <button href="#" class="btn btn-cta">
                   <svg
-                      width="14"
-                      height="21"
-                      viewBox="0 0 14 21"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M3.50075 21C5.43235 21 7.00003 19.432 7.00003 17.5V14H3.50075C1.56914 14 0.00146484 15.568 0.00146484 17.5C0.00146484 19.432 1.56914 21 3.50075 21Z"
-                        fill="#0ACF83"
-                      />
-                      <path
-                        d="M0.00146484 10.5C0.00146484 8.568 1.56914 7 3.50075 7H7.00003V14H3.50075C1.56914 14 0.00146484 12.432 0.00146484 10.5Z"
-                        fill="#A259FF"
-                      />
-                      <path
-                        d="M0.00244141 3.5C0.00244141 1.568 1.57012 0 3.50172 0H7.00101V7H3.50172C1.57012 7 0.00244141 5.432 0.00244141 3.5Z"
-                        fill="#F24E1E"
-                      />
-                      <path
-                        d="M7 0H10.4993C12.4309 0 13.9986 1.568 13.9986 3.5C13.9986 5.432 12.4309 7 10.4993 7H7V0Z"
-                        fill="#FF7262"
-                      />
-                      <path
-                        d="M13.9986 10.5C13.9986 12.432 12.4309 14 10.4993 14C8.56769 14 7 12.432 7 10.5C7 8.568 8.56769 7 10.4993 7C12.4309 7 13.9986 8.568 13.9986 10.5Z"
-                        fill="#1ABCFE"
-                      /></svg>
+                    width="14"
+                    height="21"
+                    viewBox="0 0 14 21"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M3.50075 21C5.43235 21 7.00003 19.432 7.00003 17.5V14H3.50075C1.56914 14 0.00146484 15.568 0.00146484 17.5C0.00146484 19.432 1.56914 21 3.50075 21Z"
+                      fill="#0ACF83"
+                    />
+                    <path
+                      d="M0.00146484 10.5C0.00146484 8.568 1.56914 7 3.50075 7H7.00003V14H3.50075C1.56914 14 0.00146484 12.432 0.00146484 10.5Z"
+                      fill="#A259FF"
+                    />
+                    <path
+                      d="M0.00244141 3.5C0.00244141 1.568 1.57012 0 3.50172 0H7.00101V7H3.50172C1.57012 7 0.00244141 5.432 0.00244141 3.5Z"
+                      fill="#F24E1E"
+                    />
+                    <path
+                      d="M7 0H10.4993C12.4309 0 13.9986 1.568 13.9986 3.5C13.9986 5.432 12.4309 7 10.4993 7H7V0Z"
+                      fill="#FF7262"
+                    />
+                    <path
+                      d="M13.9986 10.5C13.9986 12.432 12.4309 14 10.4993 14C8.56769 14 7 12.432 7 10.5C7 8.568 8.56769 7 10.4993 7C12.4309 7 13.9986 8.568 13.9986 10.5Z"
+                      fill="#1ABCFE"
+                    />
+                  </svg>
                   Get Figma Plugin
                 </button>
               </li>
@@ -123,80 +124,197 @@
       </header>
       <article class="banner">
         <div class="banner-img">
-          <img src="/Assets/hero-img-light.svg" alt="List of projects to do according to priority level and date in Remix.">
+          <img
+            src="/Assets/hero-img-light.svg"
+            alt="List of projects to do according to priority level and date in Remix."
+          />
         </div>
         <div class="banner-description">
-          <h1>Developer hand-off has <span class="cursor"><span>never</span></span> been easier.</h1>
-          <p>Remix is a Figma and Sketch plugin that was made with Developers in mind. Create custom React components in seconds, copy CSS code in one click, and export your assets effortlessly.</p>
+          <h1>
+            Developer hand-off has
+            <span class="cursor"><span>never</span></span> been easier.
+          </h1>
+          <p>
+            Remix is a Figma and Sketch plugin that was made with Developers in
+            mind. Create custom React components in seconds, copy CSS code in
+            one click, and export your assets effortlessly.
+          </p>
           <button href="#" class="btn btn-cta">
             <svg
-                width="14"
-                height="21"
-                viewBox="0 0 14 21"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M3.50075 21C5.43235 21 7.00003 19.432 7.00003 17.5V14H3.50075C1.56914 14 0.00146484 15.568 0.00146484 17.5C0.00146484 19.432 1.56914 21 3.50075 21Z"
-                  fill="#0ACF83"
-                />
-                <path
-                  d="M0.00146484 10.5C0.00146484 8.568 1.56914 7 3.50075 7H7.00003V14H3.50075C1.56914 14 0.00146484 12.432 0.00146484 10.5Z"
-                  fill="#A259FF"
-                />
-                <path
-                  d="M0.00244141 3.5C0.00244141 1.568 1.57012 0 3.50172 0H7.00101V7H3.50172C1.57012 7 0.00244141 5.432 0.00244141 3.5Z"
-                  fill="#F24E1E"
-                />
-                <path
-                  d="M7 0H10.4993C12.4309 0 13.9986 1.568 13.9986 3.5C13.9986 5.432 12.4309 7 10.4993 7H7V0Z"
-                  fill="#FF7262"
-                />
-                <path
-                  d="M13.9986 10.5C13.9986 12.432 12.4309 14 10.4993 14C8.56769 14 7 12.432 7 10.5C7 8.568 8.56769 7 10.4993 7C12.4309 7 13.9986 8.568 13.9986 10.5Z"
-                  fill="#1ABCFE"
-                /></svg>
+              width="14"
+              height="21"
+              viewBox="0 0 14 21"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M3.50075 21C5.43235 21 7.00003 19.432 7.00003 17.5V14H3.50075C1.56914 14 0.00146484 15.568 0.00146484 17.5C0.00146484 19.432 1.56914 21 3.50075 21Z"
+                fill="#0ACF83"
+              />
+              <path
+                d="M0.00146484 10.5C0.00146484 8.568 1.56914 7 3.50075 7H7.00003V14H3.50075C1.56914 14 0.00146484 12.432 0.00146484 10.5Z"
+                fill="#A259FF"
+              />
+              <path
+                d="M0.00244141 3.5C0.00244141 1.568 1.57012 0 3.50172 0H7.00101V7H3.50172C1.57012 7 0.00244141 5.432 0.00244141 3.5Z"
+                fill="#F24E1E"
+              />
+              <path
+                d="M7 0H10.4993C12.4309 0 13.9986 1.568 13.9986 3.5C13.9986 5.432 12.4309 7 10.4993 7H7V0Z"
+                fill="#FF7262"
+              />
+              <path
+                d="M13.9986 10.5C13.9986 12.432 12.4309 14 10.4993 14C8.56769 14 7 12.432 7 10.5C7 8.568 8.56769 7 10.4993 7C12.4309 7 13.9986 8.568 13.9986 10.5Z"
+                fill="#1ABCFE"
+              />
+            </svg>
             Get Figma Plugin
           </button>
         </div>
       </article>
     </section>
 
-    <section aria-label="Actively collaborate with developers in real time." class="collaboration wrapper">
+    <section
+      aria-label="Actively collaborate with developers in real time."
+      class="collaboration wrapper"
+    >
       <div class="collaboration-description">
         <h2>Collaboration has never been easier.</h2>
-        <p>With Remix, you will be able to actively collaborate with developers in real-time. No more back-and-forth emails and Slack messages to get that design perfect.</p>
+        <p>
+          With Remix, you will be able to actively collaborate with developers
+          in real-time. No more back-and-forth emails and Slack messages to get
+          that design perfect.
+        </p>
         <a href="#">Learn More →</a>
       </div>
       <div class="collaboration-img">
-        <img src="/Assets/collaboration.png" alt="about sharing your collaboration with someone">
+        <img
+          src="/Assets/collaboration.png"
+          alt="about sharing your collaboration with someone"
+        />
       </div>
     </section>
 
-    <section class="testimonial">
+    <section class="testimonial wrapper">
       <div class="testimonial-description">
         <h2>What our users say</h2>
-        <p>We have cultivated a growing community for developers, and that matters to us. See what our users are saying.</p>
-        <div>
-          <span><span>5.0</span>Rating</span>
-          <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M13 0.635742L16.9737 8.83441L26 10.0813L19.4307 16.395L21.034 25.3639L13 21.0663L4.96492 25.3639L6.56933 16.395L0 10.0813L9.02633 8.83441L13 0.635742Z" fill="#EAAC4C"/>
-            </svg>
+        <p>
+          We have cultivated a growing community for developers, and that
+          matters to us. See what our users are saying.
+        </p>
+        <div class="testimonial-rating">
+          <span
+            ><span class="data">5.0</span
+            ><span class="data-text">Rating</span></span
+          >
+          <svg
+            width="26"
+            height="26"
+            viewBox="0 0 26 26"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M13 0.635742L16.9737 8.83441L26 10.0813L19.4307 16.395L21.034 25.3639L13 21.0663L4.96492 25.3639L6.56933 16.395L0 10.0813L9.02633 8.83441L13 0.635742Z"
+              fill="#EAAC4C"
+            />
+          </svg>
         </div>
-        <div>
-          <span><span>2400+</span>Developers</span>
-          <ul>
-            <li><img src="/Assets/useravatar06.png" alt=""></li>
-            <li><img src="/Assets/useravatar05.png" alt=""></li>
-            <li><img src="/Assets/useravatar04.png" alt=""></li>
-            <li><img src="/Assets/useravatar03.png" alt=""></li>
-            <li><img src="/Assets/useravatar02.png" alt=""></li>
-            <li><img src="/Assets/useravatar01.png" alt=""></li>
-          </ul>
+        <div class="testimonial-rating">
+          <span
+            ><span class="data">2400+</span
+            ><span class="data-text">Developers</span></span
+          >
+          <div class="avatars">
+            <img src="/Assets/useravatar06.png" alt="" />
+            <img src="/Assets/useravatar05.png" alt="" />
+            <img src="/Assets/useravatar04.png" alt="" />
+            <img src="/Assets/useravatar03.png" alt="" />
+            <img src="/Assets/useravatar02.png" alt="" />
+            <img src="/Assets/useravatar01.png" alt="" />
+          </div>
         </div>
       </div>
-      <div>
-
+      <div class="testimonial-users">
+        <article class="user">
+          <div class="user-avatar">
+            <img src="/Assets/testimonial-avatar-1.png" alt="" />
+          </div>
+          <div class="user-description">
+            <p>
+              “Developers, you no longer need to spend hours translating
+              designs.”
+            </p>
+            <span>Jesse Hendricks</span>
+            <svg
+              width="101"
+              height="17"
+              viewBox="0 0 101 17"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M8.5 0.416016L11.0982 5.77668L17 6.59197L12.7047 10.7201L13.753 16.5844L8.5 13.7745L3.24629 16.5844L4.29533 10.7201L0 6.59197L5.90183 5.77668L8.5 0.416016Z"
+                fill="#EAAC4C"
+              />
+              <path
+                d="M29.5 0.416016L32.0982 5.77668L38 6.59197L33.7047 10.7201L34.753 16.5844L29.5 13.7745L24.2463 16.5844L25.2953 10.7201L21 6.59197L26.9018 5.77668L29.5 0.416016Z"
+                fill="#EAAC4C"
+              />
+              <path
+                d="M50.5 0.416016L53.0982 5.77668L59 6.59197L54.7047 10.7201L55.753 16.5844L50.5 13.7745L45.2463 16.5844L46.2953 10.7201L42 6.59197L47.9018 5.77668L50.5 0.416016Z"
+                fill="#EAAC4C"
+              />
+              <path
+                d="M71.5 0.416016L74.0982 5.77668L80 6.59197L75.7047 10.7201L76.753 16.5844L71.5 13.7745L66.2463 16.5844L67.2953 10.7201L63 6.59197L68.9018 5.77668L71.5 0.416016Z"
+                fill="#EAAC4C"
+              />
+              <path
+                d="M92.5 0.416016L95.0982 5.77668L101 6.59197L96.7047 10.7201L97.753 16.5844L92.5 13.7745L87.2463 16.5844L88.2953 10.7201L84 6.59197L89.9018 5.77668L92.5 0.416016Z"
+                fill="#EAAC4C"
+              />
+            </svg>
+          </div>
+        </article>
+        <article class="user">
+          <div class="user-avatar">
+            <img src="/Assets/testimonial-avatar-2.png" alt="" />
+          </div>
+          <div class="user-description">
+            <p>
+              “Remix has been a life saver when it comes to developer hand off.”
+            </p>
+            <span>Mia Andrews</span>
+            <svg
+              width="101"
+              height="17"
+              viewBox="0 0 101 17"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M8.5 0.416016L11.0982 5.77668L17 6.59197L12.7047 10.7201L13.753 16.5844L8.5 13.7745L3.24629 16.5844L4.29533 10.7201L0 6.59197L5.90183 5.77668L8.5 0.416016Z"
+                fill="#EAAC4C"
+              />
+              <path
+                d="M29.5 0.416016L32.0982 5.77668L38 6.59197L33.7047 10.7201L34.753 16.5844L29.5 13.7745L24.2463 16.5844L25.2953 10.7201L21 6.59197L26.9018 5.77668L29.5 0.416016Z"
+                fill="#EAAC4C"
+              />
+              <path
+                d="M50.5 0.416016L53.0982 5.77668L59 6.59197L54.7047 10.7201L55.753 16.5844L50.5 13.7745L45.2463 16.5844L46.2953 10.7201L42 6.59197L47.9018 5.77668L50.5 0.416016Z"
+                fill="#EAAC4C"
+              />
+              <path
+                d="M71.5 0.416016L74.0982 5.77668L80 6.59197L75.7047 10.7201L76.753 16.5844L71.5 13.7745L66.2463 16.5844L67.2953 10.7201L63 6.59197L68.9018 5.77668L71.5 0.416016Z"
+                fill="#EAAC4C"
+              />
+              <path
+                d="M92.5 0.416016L95.0982 5.77668L101 6.59197L96.7047 10.7201L97.753 16.5844L92.5 13.7745L87.2463 16.5844L88.2953 10.7201L84 6.59197L89.9018 5.77668L92.5 0.416016Z"
+                fill="#EAAC4C"
+              />
+            </svg>
+          </div>
+        </article>
       </div>
     </section>
     <script src="/index.js"></script>
