--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       </div>
     </section>
 
-    <section class="testimonial wrapper">
+    <section aria-label="Testimonials from our users about Remix" class="testimonial wrapper">
       <div class="testimonial-description">
         <h2>What our users say</h2>
         <p>
@@ -245,35 +245,39 @@
               “Developers, you no longer need to spend hours translating
               designs.”
             </p>
-            <span>Jesse Hendricks</span>
-            <svg
-              width="101"
-              height="17"
-              viewBox="0 0 101 17"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M8.5 0.416016L11.0982 5.77668L17 6.59197L12.7047 10.7201L13.753 16.5844L8.5 13.7745L3.24629 16.5844L4.29533 10.7201L0 6.59197L5.90183 5.77668L8.5 0.416016Z"
-                fill="#EAAC4C"
-              />
-              <path
-                d="M29.5 0.416016L32.0982 5.77668L38 6.59197L33.7047 10.7201L34.753 16.5844L29.5 13.7745L24.2463 16.5844L25.2953 10.7201L21 6.59197L26.9018 5.77668L29.5 0.416016Z"
-                fill="#EAAC4C"
-              />
-              <path
-                d="M50.5 0.416016L53.0982 5.77668L59 6.59197L54.7047 10.7201L55.753 16.5844L50.5 13.7745L45.2463 16.5844L46.2953 10.7201L42 6.59197L47.9018 5.77668L50.5 0.416016Z"
-                fill="#EAAC4C"
-              />
-              <path
-                d="M71.5 0.416016L74.0982 5.77668L80 6.59197L75.7047 10.7201L76.753 16.5844L71.5 13.7745L66.2463 16.5844L67.2953 10.7201L63 6.59197L68.9018 5.77668L71.5 0.416016Z"
-                fill="#EAAC4C"
-              />
-              <path
-                d="M92.5 0.416016L95.0982 5.77668L101 6.59197L96.7047 10.7201L97.753 16.5844L92.5 13.7745L87.2463 16.5844L88.2953 10.7201L84 6.59197L89.9018 5.77668L92.5 0.416016Z"
-                fill="#EAAC4C"
-              />
-            </svg>
+            <div>
+              <p>
+                <span>Jesse Hendricks</span>
+              </p>
+              <svg
+                width="101"
+                height="17"
+                viewBox="0 0 101 17"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M8.5 0.416016L11.0982 5.77668L17 6.59197L12.7047 10.7201L13.753 16.5844L8.5 13.7745L3.24629 16.5844L4.29533 10.7201L0 6.59197L5.90183 5.77668L8.5 0.416016Z"
+                  fill="#EAAC4C"
+                />
+                <path
+                  d="M29.5 0.416016L32.0982 5.77668L38 6.59197L33.7047 10.7201L34.753 16.5844L29.5 13.7745L24.2463 16.5844L25.2953 10.7201L21 6.59197L26.9018 5.77668L29.5 0.416016Z"
+                  fill="#EAAC4C"
+                />
+                <path
+                  d="M50.5 0.416016L53.0982 5.77668L59 6.59197L54.7047 10.7201L55.753 16.5844L50.5 13.7745L45.2463 16.5844L46.2953 10.7201L42 6.59197L47.9018 5.77668L50.5 0.416016Z"
+                  fill="#EAAC4C"
+                />
+                <path
+                  d="M71.5 0.416016L74.0982 5.77668L80 6.59197L75.7047 10.7201L76.753 16.5844L71.5 13.7745L66.2463 16.5844L67.2953 10.7201L63 6.59197L68.9018 5.77668L71.5 0.416016Z"
+                  fill="#EAAC4C"
+                />
+                <path
+                  d="M92.5 0.416016L95.0982 5.77668L101 6.59197L96.7047 10.7201L97.753 16.5844L92.5 13.7745L87.2463 16.5844L88.2953 10.7201L84 6.59197L89.9018 5.77668L92.5 0.416016Z"
+                  fill="#EAAC4C"
+                />
+              </svg>
+            </div>
           </div>
         </article>
         <article class="user">
@@ -284,39 +288,48 @@
             <p>
               “Remix has been a life saver when it comes to developer hand off.”
             </p>
-            <span>Mia Andrews</span>
-            <svg
-              width="101"
-              height="17"
-              viewBox="0 0 101 17"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M8.5 0.416016L11.0982 5.77668L17 6.59197L12.7047 10.7201L13.753 16.5844L8.5 13.7745L3.24629 16.5844L4.29533 10.7201L0 6.59197L5.90183 5.77668L8.5 0.416016Z"
-                fill="#EAAC4C"
-              />
-              <path
-                d="M29.5 0.416016L32.0982 5.77668L38 6.59197L33.7047 10.7201L34.753 16.5844L29.5 13.7745L24.2463 16.5844L25.2953 10.7201L21 6.59197L26.9018 5.77668L29.5 0.416016Z"
-                fill="#EAAC4C"
-              />
-              <path
-                d="M50.5 0.416016L53.0982 5.77668L59 6.59197L54.7047 10.7201L55.753 16.5844L50.5 13.7745L45.2463 16.5844L46.2953 10.7201L42 6.59197L47.9018 5.77668L50.5 0.416016Z"
-                fill="#EAAC4C"
-              />
-              <path
-                d="M71.5 0.416016L74.0982 5.77668L80 6.59197L75.7047 10.7201L76.753 16.5844L71.5 13.7745L66.2463 16.5844L67.2953 10.7201L63 6.59197L68.9018 5.77668L71.5 0.416016Z"
-                fill="#EAAC4C"
-              />
-              <path
-                d="M92.5 0.416016L95.0982 5.77668L101 6.59197L96.7047 10.7201L97.753 16.5844L92.5 13.7745L87.2463 16.5844L88.2953 10.7201L84 6.59197L89.9018 5.77668L92.5 0.416016Z"
-                fill="#EAAC4C"
-              />
-            </svg>
+            <div>
+              <p>
+                <span>Mia Andrews</span>
+              </p>
+              <svg
+                width="101"
+                height="17"
+                viewBox="0 0 101 17"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M8.5 0.416016L11.0982 5.77668L17 6.59197L12.7047 10.7201L13.753 16.5844L8.5 13.7745L3.24629 16.5844L4.29533 10.7201L0 6.59197L5.90183 5.77668L8.5 0.416016Z"
+                  fill="#EAAC4C"
+                />
+                <path
+                  d="M29.5 0.416016L32.0982 5.77668L38 6.59197L33.7047 10.7201L34.753 16.5844L29.5 13.7745L24.2463 16.5844L25.2953 10.7201L21 6.59197L26.9018 5.77668L29.5 0.416016Z"
+                  fill="#EAAC4C"
+                />
+                <path
+                  d="M50.5 0.416016L53.0982 5.77668L59 6.59197L54.7047 10.7201L55.753 16.5844L50.5 13.7745L45.2463 16.5844L46.2953 10.7201L42 6.59197L47.9018 5.77668L50.5 0.416016Z"
+                  fill="#EAAC4C"
+                />
+                <path
+                  d="M71.5 0.416016L74.0982 5.77668L80 6.59197L75.7047 10.7201L76.753 16.5844L71.5 13.7745L66.2463 16.5844L67.2953 10.7201L63 6.59197L68.9018 5.77668L71.5 0.416016Z"
+                  fill="#EAAC4C"
+                />
+                <path
+                  d="M92.5 0.416016L95.0982 5.77668L101 6.59197L96.7047 10.7201L97.753 16.5844L92.5 13.7745L87.2463 16.5844L88.2953 10.7201L84 6.59197L89.9018 5.77668L92.5 0.416016Z"
+                  fill="#EAAC4C"
+                />
+              </svg>
+            </div>
           </div>
         </article>
       </div>
     </section>
+
+    <section class="newsletter">
+
+    </section>
+
     <script src="/index.js"></script>
   </body>
 </html>
