--- a/index.html
+++ b/index.html
@@ -326,8 +326,19 @@
       </div>
     </section>
 
-    <section class="newsletter">
-
+    <section class="newsletter wrapper">
+      <div class="newsletter-text">
+        <h2>Get the Ultimate Developer Hand Off Guide</h2>
+        <p>A guide with 120+ hours worth of content to guide you on how to perfectly hand over your designs to your developers. Best part? It’s completely free.</p>
+        <form class="newsletter-form" action="#" method="GET">
+          <label for="email" class="sr-only">Enter email address</label>
+          <input type="email" name="email" id="email required" placeholder="Enter email address">
+          <button class="btn btn-cta" type="submit">Send me the guide</button>
+        </form>
+      </div>
+      <div class="newsletter-img">
+        <img src="/Assets/Illustrations.png" alt="">
+      </div>
     </section>
 
     <script src="/index.js"></script>
