layout card pricing

--- a/index.html
+++ b/index.html
@@ -195,7 +195,10 @@
       </div>
     </section>
 
-    <section aria-label="Testimonials from our users about Remix" class="testimonial wrapper">
+    <section
+      aria-label="Testimonials from our users about Remix."
+      class="testimonial wrapper"
+    >
       <div class="testimonial-description">
         <h2>What our users say</h2>
         <p>
@@ -326,21 +329,260 @@
       </div>
     </section>
 
-    <section class="newsletter wrapper">
+    <section
+      aria-label="get our guide to perfectly hand over your designs to your developers."
+      class="newsletter wrapper"
+    >
       <div class="newsletter-text">
         <h2>Get the Ultimate Developer Hand Off Guide</h2>
-        <p>A guide with 120+ hours worth of content to guide you on how to perfectly hand over your designs to your developers. Best part? It’s completely free.</p>
+        <p>
+          A guide with 120+ hours worth of content to guide you on how to
+          perfectly hand over your designs to your developers. Best part? It’s
+          completely free.
+        </p>
         <form class="newsletter-form" action="#" method="GET">
           <label for="email" class="sr-only">Enter email address</label>
-          <input type="email" name="email" id="email required" placeholder="Enter email address">
+          <input
+            type="email"
+            name="email"
+            id="email required"
+            placeholder="Enter email address"
+          />
           <button class="btn btn-cta" type="submit">Send me the guide</button>
         </form>
       </div>
       <div class="newsletter-img">
-        <img src="/Assets/Illustrations.png" alt="">
+        <img src="/Assets/Illustrations.png" alt="" />
       </div>
     </section>
 
+    <section class="pricing wrapper">
+      <article class="pricing-card">
+        <h2 class="card-title">
+          <span>Basic</span>
+          <span>
+            <span class="fs-title">$39</span>
+            <span>/mo</span>
+          </span>
+        </h2>
+        <p class="card-text">Suited for small teams with minimal developer handoffs.</p>
+        <ul class="card-list">
+          <li>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                fill="#F7CA18"
+              />
+            </svg>
+            <p>Web access only.</p>
+          </li>
+          <li>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                fill="#F7CA18"
+              />
+            </svg>
+            <p>20 Handoffs per month.</p>
+          </li>
+          <li>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                fill="#F7CA18"
+              />
+            </svg>
+            <p>2 members.</p>
+          </li>
+          <li>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                fill="#F7CA18"
+              />
+            </svg>
+            <p>Offline editing only.</p>
+          </li>
+        </ul>
+        <button href="#" class="btn btn-cta">
+          Subscribe
+        </button>
+      </article>
+      <article class="pricing-card pricing-card_cta">
+        <h2 class="card-title">
+          <span>Starter</span>
+          <span>
+            <span class="fs-title">$59</span>
+            <span>/mo</span>
+          </span>
+        </h2>
+        <p class="card-text">Suited for medium businesses with a lot of handoffs.</p>
+        <ul class="card-list">
+          <li>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                fill="#F7CA18"
+              />
+            </svg>
+            <p>Web & Figma Plugin.</p>
+          </li>
+          <li>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                fill="#F7CA18"
+              />
+            </svg>
+            <p>60 Handoffs per month.</p>
+          </li>
+          <li>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                fill="#F7CA18"
+              />
+            </svg>
+            <p>4 members.</p>
+          </li>
+          <li>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                fill="#F7CA18"
+              />
+            </svg>
+            <p>Live editing.</p>
+          </li>
+        </ul>
+        <button href="#" class="btn btn-cta">
+          Subscribe
+        </button>
+      </article>
+      <article class="pricing-card">
+        <h2 class="card-title">
+          <span>Pro</span>
+          <span>
+            <span class="fs-title">$129</span>
+            <span>/mo</span>
+          </span>
+        </h2>
+        <p class="card-text">Suited for enterprises with daily developer handoffs.</p>
+        <ul class="card-list">
+          <li>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                fill="#F7CA18"
+              />
+            </svg>
+            <p>Web & Figma Plugin.</p>
+          </li>
+          <li>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                fill="#F7CA18"
+              />
+            </svg>
+            <p>500+ Handoffs per month.</p>
+          </li>
+          <li>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                fill="#F7CA18"
+              />
+            </svg>
+            <p>Unlimited members.</p>
+          </li>
+          <li>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z"
+                fill="#F7CA18"
+              />
+            </svg>
+            <p>Live editing.</p>
+          </li>
+        </ul>
+        <button href="#" class="btn btn-cta">
+          Subscribe
+        </button>
+      </article>
+    </section>
     <script src="/index.js"></script>
   </body>
 </html>
